# server

./: .gitignore
.github/workflows/: windows.yml
src/: CMakeLists.txt
src/CMakeModules/: Bootstrap_Linux.cmake  Bootstrap_Windows.cmake  CPM.cmake  CasparCG_Util.cmake
src/accelerator/: CMakeLists.txt  StdAfx.h  accelerator.cpp  accelerator.h
src/accelerator/d3d/: d3d_device.cpp  d3d_texture2d.cpp
src/accelerator/ogl/image/: image_kernel.cpp  image_mixer.cpp  image_mixer.h
src/accelerator/ogl/util/: buffer.cpp  device.cpp  device.h  shader.cpp  shader.h  texture.cpp  texture.h
src/common/: CMakeLists.txt  bit_depth.hpp  memshfl.h  stdafx.h
src/common/compiler/vs/: disable_silly_warnings.h
src/common/gl/: gl_check.cpp
src/core/: CMakeLists.txt  StdAfx.h  video_channel.cpp
src/core/consumer/: channel_info.h  frame_consumer.h  frame_consumer_registry.h  output.cpp
src/core/diagnostics/: osd_graph.cpp
src/core/frame/: draw_frame.cpp  frame_factory.h  pixel_format.h
src/core/mixer/: mixer.h
src/core/producer/: stage.cpp
src/modules/: CMakeLists.txt
src/modules/artnet/: CMakeLists.txt
src/modules/artnet/consumer/: artnet_consumer.cpp  artnet_consumer.h
src/modules/bluefish/: CMakeLists.txt
src/modules/decklink/: CMakeLists.txt
src/modules/decklink/consumer/: decklink_consumer.cpp  decklink_consumer.h  frame.cpp
src/modules/decklink/producer/: decklink_producer.cpp  decklink_producer.h
src/modules/ffmpeg/: CMakeLists.txt
src/modules/ffmpeg/consumer/: ffmpeg_consumer.cpp  ffmpeg_consumer.h
src/modules/ffmpeg/producer/: av_common.h  av_decoder.cpp  av_decoder.h  av_filter.cpp  av_filter.h  av_input.cpp  av_producer.cpp  av_producer.h  ffmpeg_producer.cpp
src/modules/ffmpeg/util/: av_util.cpp  av_util.h
src/modules/flash/: CMakeLists.txt
src/modules/html/: CMakeLists.txt
src/modules/image/: CMakeLists.txt  image.cpp  image.cppm
src/modules/image/consumer/: image_consumer.cpp  image_consumer.cppm  image_consumer.h
src/modules/image/producer/: image_producer.cpp  image_producer.cppm  image_scroll_producer.cpp  image_scroll_producer.cppm
src/modules/image/util/: image_algorithms.cpp  image_algorithms.cppm  image_converter.cpp  image_converter.cppm  image_loader.cpp  image_loader.cppm  image_util.cppm  image_view.cppm
src/modules/newtek/: CMakeLists.txt
src/modules/newtek/consumer/: newtek_ndi_consumer.cpp  newtek_ndi_consumer.h
src/modules/oal/: CMakeLists.txt  oal.cpp  oal.cppm
src/modules/oal/consumer/: oal_consumer.cpp  oal_consumer.cppm  oal_consumer.h
src/modules/screen/: CMakeLists.txt  screen.cpp  screen.cppm
src/modules/screen/consumer/: screen_consumer.cpp  screen_consumer.cppm  screen_consumer.h
src/modules/screen/util/: x11_util.cpp  x11_util.cppm
src/protocol/: CMakeLists.txt
src/protocol/amcp/: AMCPCommandQueue.cpp  AMCPCommandsImpl.cpp
src/protocol/osc/: client.cpp
src/protocol/util/: AsyncEventServer.cpp  AsyncEventServer.h  http_request.cpp  lock_container.cpp
src/shell/: CMakeLists.txt  casparcg.config  server.cpp
src/tools/: CMakeLists.txt
